# kg-proj

./: README.md  _kg-dota.rdf  items.json  kg-dota.rdf  pyproject.toml
kg/: logger.py  parse.py  scrape.py
kg/embedding/: main.ipynb
kg/onto/: builder.py
kg/queries/: README.md  crafts_into.py  full_recipe.py
kg/scraper/dota/: known.py  types.py  utils.py
kg/scraper/scrapers/: base_scraper.py  dota2_ru_scraper.py  fandom_scraper.py
src/: logger.py  main.py  parse.py  scraper.py  utils.py
src/scraper/: __init__.py
src/scraper/dota/: consts.py  types.py  utils.py
src/scraper/scrapers/: base_scraper.py  dota2_ru_scraper.py  fandom_scraper.py
