[project]
name = "kg-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "lavrentious",email = "lavrent0@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.4,<3.0.0)",
    "rdflib (>=7.4.0,<8.0.0)",
    "dacite (>=1.9.2,<2.0.0)",
    "pykeen (>=1.11.1,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)"
]
packages = [
    { include = "kg", from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
autoflake = "^2.3.1"
mypy = "^1.15.0"
black = "^25.1.0"
types-requests = "^2.32.0.20250602"
ipykernel = "^7.1.0"

[tool.mypy]
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
